--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,6 @@ members = [
     "bingtray",
     "mobile",
 ]
-exclude = [
-    "mobile",
-]
 
 [workspace.package]
 edition = "2021"
@@ -26,12 +23,11 @@ chrono = { version = "0.4", features = ["serde"] }
 rand = "0.8"
 regex = "1.10"
 scraper = "0.20"
-clap = { version = "4.4", features = ["derive"] }
 
 [profile.release]
-lto = "fat"
+lto = true # "fat"
 codegen-units = 1
-opt-level = 3
+opt-level = "z"
 debug = 0
 strip = "symbols"
 
