--- a/bingtray-core/Cargo.toml
+++ b/bingtray-core/Cargo.toml
@@ -6,7 +6,6 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-directories = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 attohttpc = { workspace = true }
@@ -15,4 +14,8 @@ chrono = { workspace = true }
 rand = { workspace = true }
 regex = { workspace = true }
 scraper = { workspace = true }
+
+# Conditional dependencies for non-Android platforms
+[target.'cfg(not(target_os = "android"))'.dependencies]
+directories = { workspace = true }
 wallpaper = { workspace = true }
