--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,15 @@ directories = "5.0"
 wallpaper = "3.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-attohttpc = { version = "0.28", default-features = false, features = ["tls-rustls-webpki-roots"] }
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 rand = "0.8"
 regex = "1.10"
 scraper = "0.20"
+log = { version = "0.4", default-features = false }
+tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
+
 
 [profile.release]
 lto = true # "fat"
