--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -126,7 +126,7 @@ jobs:
         run: | 
           cargo install cross --git https://github.com/cross-rs/cross
 
-      - name: Android, Build ${{ matrix.platform.name }} binary # android release apk build
+      - name: Android, Build ${{ matrix.platform.name }} binary # android release apk/aab build
         if: (contains(matrix.platform.name, 'Android APK arm64'))
         run: | 
           echo "storePassword=${{ secrets.STORE_PASSWORD }}" > ./android/keystore.properties
@@ -141,6 +141,18 @@ jobs:
           cp ./app/build/outputs/apk/release/app-release.apk ./app/build/outputs/apk/release/bingtray-all-signed.apk
           ls -al ./app/build/outputs/apk/release
           popd
+      
+      - name: Android, Publish to google play # https://github.com/marketplace/actions/upload-android-release-to-play-store
+        if: (contains(matrix.platform.name, 'Android APK arm64'))
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+          packageName: pe.nikescar.bingtray
+          releaseFiles: mobile/app/build/outputs/bundle/release/app-release.aab
+          track: production
+          inAppUpdatePriority: 2
+          userFraction: 0.33
+          debugSymbols: mobile/app/build/intermediates/merged_native_libs/release/mergeReleaseNativeLibs/out/lib
 
       - name: Non Android, Native bingtray Build ${{ matrix.platform.name }} binary
         if: (contains(matrix.platform.target, 'x86_64') || contains(matrix.platform.target, 'aarch64') || contains(matrix.platform.target, 'armv7')) && !contains(matrix.platform.name, 'Android APK arm64')
@@ -148,7 +160,7 @@ jobs:
         with:
           command: build
           args: ${{ matrix.platform.build-args }} --package bingtray
-
+      
       - name: Store artifact bingtray
         if: (!contains(matrix.platform.name, 'Android APK arm64'))
         uses: actions/upload-artifact@v4
@@ -202,6 +214,10 @@ jobs:
               fi
           done
           cp artifacts/bing*.tar.gz distbin/
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CLOUDFLARE_PAGES_TOKEN: ${{ secrets.CLOUDFLARE_PAGES_TOKEN }}
+          FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
 
       - name: Release
         uses: softprops/action-gh-release@v2
