--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -129,12 +129,12 @@ jobs:
       - name: Android, Build ${{ matrix.platform.name }} binary # android release apk/aab build
         if: (contains(matrix.platform.name, 'Android APK arm64'))
         run: | 
-          echo "storePassword=${{ secrets.STORE_PASSWORD }}" > ./android/keystore.properties
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> ./android/keystore.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> ./android/keystore.properties
-          echo "storeFile=release.keystore" >> ./android/keystore.properties
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./android/app/release.keystore
-          echo "${{ secrets.STORE_PASSWORD }}" | keytool -list -v -keystore $PWD/android/app/release.keystore
+          echo "storePassword=${{ secrets.STORE_PASSWORD }}" > ./mobile/keystore.properties
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> ./mobile/keystore.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> ./mobile/keystore.properties
+          echo "storeFile=release.keystore" >> ./mobile/keystore.properties
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./mobile/app/release.keystore
+          echo "${{ secrets.STORE_PASSWORD }}" | keytool -list -v -keystore $PWD/mobile/app/release.keystore
 
           pushd android
           bash ./build.gh.sh
@@ -175,7 +175,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bingtray-all-signed.apk
-          path: ./android/app/build/outputs/apk/release/bingtray-all-signed.apk
+          path: ./mobile/app/build/outputs/apk/release/bingtray-all-signed.apk
           retention-days: 1
       
   release:
