--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,16 +138,16 @@ jobs:
           ls -al ./app/build/outputs/apk/release
           popd
       
-      - name: Android, Publish to google play # https://github.com/marketplace/actions/upload-android-release-to-play-store
-        if: (contains(matrix.platform.name, 'Android APK arm64'))
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-          packageName: pe.nikescar.bingtray
-          releaseFiles: mobile/app/build/outputs/bundle/release/app-release.aab
-          track: production
-          inAppUpdatePriority: 2
-          debugSymbols: mobile/app/build/intermediates/merged_native_libs/release/mergeReleaseNativeLibs/out/lib
+      # - name: Android, Publish to google play # https://github.com/marketplace/actions/upload-android-release-to-play-store
+      #   if: (contains(matrix.platform.name, 'Android APK arm64'))
+      #   uses: r0adkll/upload-google-play@v1
+      #   with:
+      #     serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+      #     packageName: pe.nikescar.bingtray
+      #     releaseFiles: mobile/app/build/outputs/bundle/release/app-release.aab
+      #     track: production
+      #     inAppUpdatePriority: 2
+      #     debugSymbols: mobile/app/build/intermediates/merged_native_libs/release/mergeReleaseNativeLibs/out/lib
 
       - name: Non Android, Native bingtray Build ${{ matrix.platform.name }} binary
         if: (contains(matrix.platform.target, 'x86_64') || contains(matrix.platform.target, 'aarch64') || contains(matrix.platform.target, 'armv7')) && !contains(matrix.platform.name, 'Android APK arm64')
