--- a/.github/workflows/vite.docs.yml
+++ b/.github/workflows/vite.docs.yml
@@ -1,7 +1,7 @@
 name: Deploy static content to Pages
 on:
-  # push:
-  #  branches: ['main']
+  push:
+   branches: ['main']
 
   workflow_dispatch:
 
