--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ include:
   - index.md
   - imgs
   - README.md
+  - google1fadff23415819bc.html
 
 # Theme settings
 theme_upstream: 'https://github.com/nikescar/mdx-sitegen-solidbase'
