--- a/deploy/fdroid/pe.nikescar.bingtray.yml
+++ b/deploy/fdroid/pe.nikescar.bingtray.yml
@@ -1,3 +1,4 @@
+# this manifest is for the F-Droid repository
 AntiFeatures:
   NonFreeAssets:
     en-US: Depends on Bing Images.
@@ -12,10 +13,6 @@ SourceCode: https://github.com/nikescar/bingtray
 IssueTracker: https://github.com/nikescar/bingtray/issues
 
 AutoName: Bingtray
-Description: |-
-  Select Wallpaper from Bing Images of the Day.
-  You can find Original Windows app on follwing link:
-  https://www.microsoft.com/en-us/bing/features/bing-wallpaper/
 
 RepoType: git
 Repo: https://github.com/nikescar/bingtray.git
@@ -24,19 +21,26 @@ Builds:
   - versionName: 0.0.6
     versionCode: 239015706
     commit: v0.0.6
-    init: echo 'started init.'
+    # init: echo 'started init.'
     output: mobile/app/build/outputs/apk/release/app-release.apk
-    prebuild: echo 'started prebuild'
+    # prebuild: echo 'started prebuild'
     scanignore:
       - mobile/Cargo.toml
       - bingtray-core/Cargo.toml
       - bingtray/Cargo.toml
       - Cargo.toml
-    build: echo 'started build' && cd mobile && ./build.fd.sh
-    postbuild: echo 'postbuild.'
-    antifeatures:
-      - NonFreeAssets
-      - NonFreeNet
+    build:
+      - source $HOME/.cargo/env
+      - cd mobile
+      - cargo ndk -t armeabi-v7a -o app/src/main/jniLibs/ build --release --lib
+      - cargo ndk -t arm64-v8a -o app/src/main/jniLibs/ build --release --lib
+      - cargo ndk -t x86 -o app/src/main/jniLibs/ build --release --lib
+      - cargo ndk -t x86_64 -o app/src/main/jniLibs/ build --release --lib
+      - gradle assembleRelease
+    # postbuild: echo 'postbuild.'
+    # antifeatures:
+    #  - NonFreeAssets
+    #  - NonFreeNet
 
 AutoUpdateMode: Version v%v
 UpdateCheckMode: HTTP
