--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,16 @@ scraper = "0.20"
 log = { version = "0.4", default-features = false }
 tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
 
+egui = { version = "0.32", default-features = false, features = ["default_fonts"] }
+eframe = { version = "0.32", default-features = false, features = [
+    "default_fonts",
+    "glow",
+    "persistence",
+    "android-native-activity",
+    "wgpu",
+] }
+egui_extras = { version = "0.32", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
+wgpu = { version = "25.0.0" }
 
 [profile.release]
 lto = true # "fat"
