--- a/mobile/Cargo.toml
+++ b/mobile/Cargo.toml
@@ -14,50 +14,25 @@ serde = ["dep:serde", "dep:serde_json"]
 name = "bingtray_mobile"
 crate-type = ["cdylib", "rlib"]
 
-[[bin]]
-name = "mobile"
-path = "src/main.rs"
-required-features = ["desktop"]
+# No binary target - this is a library only
 
 [dependencies]
 log = { workspace = true }
-bingtray-core = { path = "../bingtray-core", default-features = false }
-chrono = { workspace = true }
-regex = { workspace = true }
-egui = { version = "0.31.1", features = ["default_fonts"] }
-image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
-ehttp = { version = "0.5", default-features = false }
-poll-promise = { version = "0.3", default-features = false }
+bingtray-core = { path = "../bingtray-core", features = ["serde"] }
+egui = { workspace = true }
+eframe = { workspace = true }
+egui_extras = { workspace = true }
 serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
 serde_json = { version = "1.0", default-features = false, optional = true }
-
-# Desktop-only dependencies (these use winit and don't support Android)
-[target.'cfg(not(target_os = "android"))'.dependencies]
-egui_extras = { version = "0.31.1", default-features = false, features = ["image", "svg"] }
-# egui-winit = { version = "0.31.1", default-features = false }
-egui-winit = { version = "0.31.1" }
-webbrowser = { version = "1.0.5", default-features = false }
-env_logger = { version = "0.11", default-features = false }
-screen_size = "0.1.0"
-
-# Add wgpu feature for desktop eframe
-[target.'cfg(not(target_os = "android"))'.dependencies.eframe]
-version = "0.31.1"
-default-features = false
-features = ["wgpu", "default_fonts", "glow"] # , "persistence"
+wgpu = { workspace = true }
 
 [target.'cfg(target_os = "android")'.dependencies]
-eframe = { version = "0.31.1", default-features = false, features = ["glow", "wgpu", "android-native-activity", "default_fonts"] }
-egui_extras = { version = "0.31.1", default-features = false, features = ["image", "svg"] }
-webbrowser = { version = "1.0.5", default-features = false }
 ndk-context = { version = "0.1", default-features = false }
 jni = { version = "0.21", default-features = false }
 android_logger = { version = "0.15", default-features = false }
 android-activity = { version = "0.6", default-features = false, features = ["native-activity"] }
 ndk-sys = { version = "0.6.0", default-features = false }
-ndk = { version = "0.9.0", default-features = false }
 
-# iOS-only dependencies (optional)
 [target.'cfg(target_os = "ios")'.dependencies]
 bevy = { version = "0.16.0", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit"], optional = true }
 bevy_egui = { version = "0.35.1", default-features = false, optional = true }
