--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,22 +20,24 @@ serde_json = "1.0"
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
+js-sys = "0.3.77"
 rand = "0.8"
 regex = "1.10"
 scraper = "0.20"
 log = { version = "0.4", default-features = false }
-tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
+tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"], default-features = false }
 
-egui = { version = "0.32", default-features = false, features = ["default_fonts"] }
-eframe = { version = "0.32", default-features = false, features = [
+egui = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts"] }
+eframe = { git = "https://github.com/emilk/egui", default-features = false, features = [
     "default_fonts",
     "glow",
-    "persistence",
+    # "persistence",
     "android-native-activity",
     "wgpu",
 ] }
-egui_extras = { version = "0.32", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
+egui_extras = { git = "https://github.com/emilk/egui", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
 wgpu = { version = "25.0.0" }
+getrandom = { version = "0.2.16" }
 
 [profile.release]
 lto = true # "fat"
@@ -47,3 +49,4 @@ strip = "symbols"
 [profile.release-with-symbols]
 inherits = "release"
 strip = false
+
