--- a/bingtray-core/Cargo.toml
+++ b/bingtray-core/Cargo.toml
@@ -35,9 +35,8 @@ webbrowser = { version = "1.0.5", default-features = false }
 ehttp = "0.5"
 poll-promise = "0.3"
 image = { version = "0.25", features = ["jpeg", "png"] }
-env_logger = "0.11"
 
-# Web-specific dependencies
+# Wasm
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4"
@@ -47,13 +46,15 @@ getrandom = { version = "0.2.16", features = ["js"] }
 tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"], default-features = false }
 eframe = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts", "glow"] }
 
-# Conditional dependencies for non-Android and non-WASM platforms
+sqlite-wasm-rs = { version = "0.4", default-features = false, features = ["precompiled"] }
+
+# Desktop
 [target.'cfg(all(not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
 directories = { workspace = true }
 wallpaper = { workspace = true }
-# egui-winit = { version = "0.31.1" }
+egui-winit = { version = "0.31.1" }
 
-# native:
+# Desktop, Android
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = { version = "0.10", default-features = false, features = [
   "auto-color",
