--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,14 +37,15 @@ jobs:
           - name: Linux armv6
             target: arm-unknown-linux-musleabihf
             build-args: "--release"
+          
+          # even libgtk-3-dev has installed, The system library `gdk-3.0` required by crate `gdk-sys` was not found. not resolved.
+          # - name: Freebsd x86_64
+          #   target: x86_64-unknown-freebsd
+          #   build-args: "--release"
 
-          - name: Freebsd x86_64
-            target: x86_64-unknown-freebsd
-            build-args: "--release"
-
-          - name: Freebsd x86
-            target: i686-unknown-freebsd
-            build-args: "--release"
+          # - name: Freebsd x86
+          #   target: i686-unknown-freebsd
+          #   build-args: "--release"
 
           - name: Android aarch64
             target: aarch64-linux-android
@@ -138,16 +139,16 @@ jobs:
           ls -al ./app/build/outputs/apk/release
           popd
       
-      # - name: Android, Publish to google play # https://github.com/marketplace/actions/upload-android-release-to-play-store
-      #   if: (contains(matrix.platform.name, 'Android APK arm64'))
-      #   uses: r0adkll/upload-google-play@v1
-      #   with:
-      #     serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-      #     packageName: pe.nikescar.bingtray
-      #     releaseFiles: mobile/app/build/outputs/bundle/release/app-release.aab
-      #     track: production
-      #     inAppUpdatePriority: 2
-      #     debugSymbols: mobile/app/build/intermediates/merged_native_libs/release/mergeReleaseNativeLibs/out/lib
+      - name: Android, Publish to google play # https://github.com/marketplace/actions/upload-android-release-to-play-store
+        if: (contains(matrix.platform.name, 'Android APK arm64'))
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+          packageName: pe.nikescar.bingtray
+          releaseFiles: mobile/app/build/outputs/bundle/release/app-release.aab
+          track: production
+          inAppUpdatePriority: 2
+          debugSymbols: mobile/app/build/intermediates/merged_native_libs/release/mergeReleaseNativeLibs/out/lib
 
       - name: Non Android, Native bingtray Build ${{ matrix.platform.name }} binary
         if: (contains(matrix.platform.target, 'x86_64') || contains(matrix.platform.target, 'aarch64') || contains(matrix.platform.target, 'armv7')) && !contains(matrix.platform.name, 'Android APK arm64')
