--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,19 +13,19 @@ rust-version = "1.81"
 version = "0.0.0-git"
 
 [workspace.dependencies]
-directories = "5.0"
-wallpaper = "3.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 js-sys = "0.3.77"
 rand = "0.8"
 regex = "1.10"
+webbrowser = { version = "1.0.5", default-features = false }
+
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
+tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"], default-features = false }
 scraper = "0.20"
 log = { version = "0.4", default-features = false }
-tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"], default-features = false }
 
 egui = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts"] }
 eframe = { git = "https://github.com/emilk/egui", default-features = false, features = [
@@ -37,7 +37,7 @@ eframe = { git = "https://github.com/emilk/egui", default-features = false, feat
 ] }
 egui_extras = { git = "https://github.com/emilk/egui", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
 wgpu = { version = "25.0.0" }
-getrandom = { version = "0.2.16" }
+# getrandom = { version = "0.2.16" }
 
 [profile.release]
 lto = true # "fat"
