--- a/bingtray-core/Cargo.toml
+++ b/bingtray-core/Cargo.toml
@@ -13,25 +13,26 @@ default = ["serde"]
 serde = ["dep:serde", "dep:serde_json"]
 
 [dependencies]
+# Core(Desktop, Android, WASM))
 serde = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
-reqwest = { workspace = true }
 anyhow = { workspace = true }
 chrono = { workspace = true }
 rand = { workspace = true }
 regex = { workspace = true }
-scraper = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true }
+reqwest = { workspace = true }
+scraper = { workspace = true }
+webbrowser = { workspace = true }
 
-# GUI dependencies
+# GUI. All(Desktop. Android, WASM)
 egui = { workspace = true }
 eframe = { workspace = true, default-features = false }
 egui_extras = { workspace = true }
 wgpu = { workspace = true }
-getrandom = { version = "0.3", features = ["wasm_js"] }
+# getrandom = { version = "0.3", features = ["wasm_js"] }
 
-webbrowser = { version = "1.0.5", default-features = false }
 ehttp = "0.5"
 poll-promise = "0.3"
 image = { version = "0.25", features = ["jpeg", "png"] }
@@ -42,16 +43,15 @@ wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4"
 web-sys = "0.3.73"
 js-sys = "0.3.77"
-getrandom = { version = "0.2.16", features = ["js"] }
+# getrandom = { version = "0.2.16", features = ["js"] }
 tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"], default-features = false }
 eframe = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts", "glow"] }
-
 sqlite-wasm-rs = { version = "0.4", default-features = false, features = ["precompiled"] }
 
 # Desktop
 [target.'cfg(all(not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
-directories = { workspace = true }
-wallpaper = { workspace = true }
+# directories = { workspace = true }
+# wallpaper = { workspace = true }
 egui-winit = { version = "0.31.1" }
 
 # Desktop, Android
