--- a/bingtray/Cargo.toml
+++ b/bingtray/Cargo.toml
@@ -16,10 +16,12 @@ anyhow = { workspace = true }
 chrono = { workspace = true }
 rand = { workspace = true }
 log = { workspace = true }
-tray-icon = "0.18"
-webbrowser = "1.0.5"
+
 tao = "0.33"
 image = "0.25"
+tray-icon = "0.18"
+directories = "5.0"
+wallpaper = "3.2.0"
 
 [target."cfg(target_os = \"windows\")".dependencies.windows-sys]
 version = "0.59"
