--- a/bingtray/Cargo.toml
+++ b/bingtray/Cargo.toml
@@ -22,6 +22,7 @@ image = "0.25"
 tray-icon = "0.18"
 directories = "5.0"
 wallpaper = "3.2.0"
+webbrowser = { version = "1.0.5", default-features = false }
 
 [target."cfg(target_os = \"windows\")".dependencies.windows-sys]
 version = "0.59"
