--- a/bingtray-core/Cargo.toml
+++ b/bingtray-core/Cargo.toml
@@ -29,9 +29,8 @@ scraper = { workspace = true }
 egui = { workspace = true }
 eframe = { workspace = true, default-features = false }
 egui_extras = { workspace = true }
-wgpu = { workspace = true }
-# getrandom = { version = "0.3", features = ["wasm_js"] }
-
+getrandom = { version = "0.3", features = ["wasm_js"] }
+wgpu = { workspace = true, default-features = false }
 ehttp = "0.5"
 poll-promise = "0.3"
 image = { version = "0.25", features = ["jpeg", "png"] }
@@ -42,14 +41,16 @@ wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4"
 web-sys = "0.3.73"
 js-sys = "0.3.77"
-# getrandom = { version = "0.2.16", features = ["js"] }
 tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"], default-features = false }
 eframe = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts", "glow"] }
 sqlite-wasm-rs = { version = "0.4", default-features = false, features = ["precompiled"] }
+getrandom = { version = "0.2.16", features = ["js"] }
+wgpu = { workspace = true, features = ["webgpu"]}
 
 # Desktop
 [target.'cfg(all(not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
-egui-winit = { version = "0.31.1" }
+egui-winit = { git = "https://github.com/emilk/egui", default-features = false, features = ["bytemuck", "links", "serde", "wayland", "x11"] }
+wgpu = { workspace = true, features = ["dx12","metal","vulkan","gles"] }
 
 # Desktop, Android
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -60,3 +61,7 @@ env_logger = { version = "0.10", default-features = false, features = [
 mimalloc = "0.1"
 tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "time"], default-features = false }
 rfd = { version = "0.15.3", optional = true }
+
+# Android
+[target.'cfg(target_os = "android")'.dependencies]
+wgpu = { workspace = true, features = ["vulkan","gles"] }
