fix. add amazon store link and github action.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -149,6 +149,14 @@ jobs:
           track: production
           inAppUpdatePriority: 2
           debugSymbols: mobile/app/build/intermediates/merged_native_libs/release/mergeReleaseNativeLibs/out/lib
+      
+      - name: Upload to the Amazon AppStore
+        uses: ALJAZEERAPLUS/amazon-appstore-action@v1
+        with:
+          client-id: ${{secrets.AMAZON_APPSTORE_CLIENT_ID}}
+          client-secret: ${{secrets.AMAZON_APPSTORE_CLIENT_SECRET}}
+          app-id: ${{ secrets.AMAZON_APPSTORE_APP_ID }}
+          apk-file: mobile/app/build/outputs/bundle/release/app-release.aab
 
       - name: Non Android, Native bingtray Build ${{ matrix.platform.name }} binary
         if: (contains(matrix.platform.target, 'x86_64') || contains(matrix.platform.target, 'aarch64') || contains(matrix.platform.target, 'armv7')) && !contains(matrix.platform.name, 'Android APK arm64')
