--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,8 +10,6 @@ confinement: strict
 
 architectures:
   - build-on: amd64
-  - build-on: arm64
-  - build-on: armhf
 
 apps:
   bingtray:
@@ -19,6 +17,8 @@ apps:
     plugs:
       - home
       - network
+      - desktop
+      - desktop-legacy
 
 parts:
   bingtray:
@@ -29,20 +29,17 @@ parts:
       - pkg-config
       - gettext
       - libclang-dev
-      - on arm64,armhf,ppc64el,s390x:
-        - lld
+      - musl-tools
     override-build: |
-      # buildinng process already finished in the build step of github actions
-      # so just copy the binary to the snap install directory
-
-      # Set version from git
+      # Install Rust with musl target for static linking
+      curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
+      export PATH="$HOME/.cargo/bin:$PATH"
+      source $HOME/.cargo/env
+      
+      rustup target add x86_64-unknown-linux-musl
+      
       snapcraftctl set-version $(git describe --tags --always 2>/dev/null || echo "0.0.6")
       
-      # Build for the target architecture
-      if [ "$SNAPCRAFT_TARGET_ARCH" != "amd64" ]; then
-        # cargo build --workspace --release --target $RUST_TARGET
-        install -Dm755 target/$RUST_TARGET/release/bingtray $SNAPCRAFT_PART_INSTALL/bin/bingtray
-      else
-        # cargo build --workspace --release
-        install -Dm755 target/release/bingtray $SNAPCRAFT_PART_INSTALL/bin/bingtray
-      fi
+      # Build with musl for static linking
+      cargo build --package bingtray --release --target x86_64-unknown-linux-musl
+      install -Dm755 target/x86_64-unknown-linux-musl/release/bingtray $SNAPCRAFT_PART_INSTALL/bin/bingtray
