--- a/mobile/app/build.gradle
+++ b/mobile/app/build.gradle
@@ -85,8 +85,8 @@ android {
     }
     
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     
     // Explicitly configure source sets
