--- a/mobile/gradle.properties
+++ b/mobile/gradle.properties
@@ -22,3 +22,4 @@ android.nonTransitiveRClass=true
 android.defaults.buildfeatures.buildconfig=false
 android.nonFinalResIds=false
 android.suppressUnsupportedCompileSdk=35
+android.javaCompile.suppressSourceTargetDeprecationWarning=true
