--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         </activity>
         
         <service
-            android:name=".WallpaperService"
+            android:name=".BingtrayWallpaperService"
             android:foregroundServiceType="specialUse"
             android:exported="false">
             <property 
