--- a/mobile/app/src/main/AndroidManifest.xml
+++ b/mobile/app/src/main/AndroidManifest.xml
@@ -16,10 +16,19 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+        android:preserveLegacyExternalStorage="true"
+        android:extractNativeLibs="false"
+        android:requestLegacyExternalStorage="true">
         <activity
             android:name="android.app.NativeActivity"
-            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden|uiMode|colorMode|locale|fontScale|density|navigation|touchscreen|keyboard|smallestScreenSize|layoutDirection"
+            android:launchMode="singleTask"
+            android:hardwareAccelerated="true"
+            android:resizeableActivity="false"
+            android:supportsPictureInPicture="false"
+            android:windowSoftInputMode="stateHidden|adjustNothing"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,12 +36,15 @@
             </intent-filter>
 
             <meta-data android:name="android.app.lib_name" android:value="bingtray_mobile" />
+            <meta-data android:name="android.allow_backup" android:value="false" />
+            <meta-data android:name="android.theme.customization.enabled" android:value="false" />
         </activity>
         
         <service
             android:name=".BingtrayWallpaperService"
             android:foregroundServiceType="specialUse"
-            android:exported="false">
+            android:exported="false"
+            android:process=":wallpaper">
             <property 
                 android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
                 android:value="wallpaper_setting" />
