--- a/bingtray/Cargo.toml
+++ b/bingtray/Cargo.toml
@@ -34,6 +34,9 @@ wgpu = { workspace = true, default-features = false }
 ehttp = "0.5"
 poll-promise = "0.3"
 image = { version = "0.25", features = ["jpeg", "png"] }
+egui-material3 = "0.0.4"
+
+diesel = { version = "2.1.0", features = ["sqlite"] }
 
 # Wasm
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -46,7 +49,7 @@ eframe = { git = "https://github.com/emilk/egui", default-features = false, feat
 getrandom = { version = "0.2.16", features = ["js"] }
 wgpu = { workspace = true, features = ["webgpu"]}
 
-sqlite-wasm-rs = { version = "0.4", default-features = false, features = ["precompiled"] }
+sqlite-wasm-rs = { version = "0.4", default-features = false, features = ["precompiled", "relaxed-idb"] }
 
 # Desktop, Android
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
