--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,15 +26,24 @@ tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"
 scraper = "0.20"
 log = { version = "0.4", default-features = false }
 
-egui = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts"] }
-eframe = { git = "https://github.com/emilk/egui", default-features = false, features = [
+# egui = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts"] }
+# eframe = { git = "https://github.com/emilk/egui", default-features = false, features = [
+#     "default_fonts",
+#     "glow",
+#     # "persistence",
+#     "android-native-activity",
+#     "wgpu",
+# ] }
+# egui_extras = { git = "https://github.com/emilk/egui", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
+egui = { version = "0.32.2", default-features = false, features = ["default_fonts"] }
+eframe = { version = "0.32.2", default-features = false, features = [
     "default_fonts",
     "glow",
     # "persistence",
     "android-native-activity",
     "wgpu",
 ] }
-egui_extras = { git = "https://github.com/emilk/egui", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
+egui_extras = { version = "0.32.2", default-features = false, features = ["image", "svg", "default", "all_loaders"] }
 wgpu = { version = "25.0.0", default-features = false }
 
 [profile.release]
