--- a/bingtray/Cargo.toml
+++ b/bingtray/Cargo.toml
@@ -13,7 +13,7 @@ default = ["serde"]
 serde = ["dep:serde", "dep:serde_json"]
 
 [dependencies]
-# Core(Desktop, Android, WASM))
+# Core(Desktop, Android, WASM)
 serde = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
 anyhow = { workspace = true }
@@ -26,6 +26,7 @@ tokio = { workspace = true }
 reqwest = { workspace = true }
 scraper = { workspace = true }
 webbrowser = { version = "1.0.5", default-features = false }
+ureq = { version = "2.9", features = ["json"] }
 
 # GUI. All(Desktop. Android, WASM)
 egui = { workspace = true }
