--- a/bingtray/Cargo.toml
+++ b/bingtray/Cargo.toml
@@ -23,7 +23,7 @@ regex = { workspace = true }
 log = { workspace = true }
 directories = "5.0"
 tokio = { workspace = true }
-reqwest = { workspace = true }
+# reqwest = { workspace = true }
 scraper = { workspace = true }
 webbrowser = { version = "1.0.5", default-features = false }
 ureq = { version = "2.9", features = ["json"] }
