--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,17 +35,8 @@ log = { version = "0.4", default-features = false }
 egui = { version = "0.32.3", default-features = false, features = ["default_fonts"] }
 eframe = { version = "0.32.3", default-features = true }
 egui_extras = { version = "0.32.3", default-features = false, features = ["image", "svg", "svg_text"] }
-egui-material3 = { version = "0.0.5", default-features = false, features = ["ondemand"] }
-
-# egui = { version = "0.32.2", default-features = false, features = ["default_fonts"] }
-# eframe = { version = "0.32.2", default-features = false, features = [
-#     "default_fonts",
-#     "glow",
-#     # "persistence",
-#     "android-native-activity",
-#     "wgpu",
-# ] }
-# egui_extras = { version = "0.32.2", default-features = false, features = ["image", "svg", "svg_text"] }
+egui-material3 = { version = "0.0.6", default-features = false, features = ["ondemand"] }
+# egui-material3 = { path = "/home/wj/Desktop/work/egui-material3", default-features = false, features = ["ondemand"] }
 
 wgpu = { version = "25.0.0", default-features = false }
 
